fixed overflow of enter message

--- a/styl.css
+++ b/styl.css
@@ -76,7 +76,7 @@ button
 {
 	cursor: pointer;
 	margin:30px;
-	margin-top:50px;
+	/*margin-top:50px;*/
 	margin-bottom: 10px;
 	border:none;
 	background-color:rgba(0,0,0,.1);
